<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:id="@+id/logo_abc_play"
                    android:layout_width="0dp"
                    android:layout_height="49dp"
                    android:layout_marginStart="75dp"
                    android:layout_marginTop="150dp"
                    android:layout_marginEnd="75dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/logo"/>

            <TextView
                    android:id="@+id/text_bem_vindo_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/bem_vindo_login"
                    android:textColor="@color/text_black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/logo_abc_play"/>


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_layout"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/text_black"
                    android:background="#E1ECEA"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/text_bem_vindo_login">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_input_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_text"
                        android:textColor="@color/text_black"
                        android:textColorHint="@color/text_black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="50dp"
                    android:textColorHint="@color/text_black"
                    app:boxBackgroundColor="@color/text_black"
                    app:endIconMode="password_toggle"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/email_layout">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_input_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/senha_text"
                        android:inputType="textPassword"
                        android:background="#E1ECEA"
                        android:textColor="@color/text_black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/button_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/bd_button_green"
                    android:text="@string/login_text_button"
                    android:textColor="#fff"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/password_layout"
                    android:onClick="onLogin"/>

            <Button
                    android:id="@+id/button_cadastro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/bg_button_blue"
                    android:text="@string/cadastro_text_button"
                    android:textColor="#FFF"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/button_login"/>
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
            android:id="@+id/loginProgressLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            android:background="@color/transparent_grey">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>